本地化资源页开发

--- a/app/src/main/res/layout/lovelive_grid_resource_layout.xml
+++ b/app/src/main/res/layout/lovelive_grid_resource_layout.xml
@@ -13,6 +13,7 @@
     <GridLayout
         android:id="@+id/lovelive_grid_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:columnCount="2"/>
 
 </LinearLayout>
